--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   path_provider: ^2.0.9
   firebase_storage: ^10.2.14
   cached_network_image: ^3.2.0
+  carousel_slider: ^4.1.1
+  smooth_page_indicator: ^1.0.0+2
 #  path_provider: ^2.0.9
 #  path: ^1.8.0
 
@@ -83,7 +85,6 @@ flutter:
     - lib/img/intro/
     - lib/img/home/
     - lib/img/discovery/
-    - lib/img/istockphoto-1008665336-612x612.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
