--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,7 @@ app.*.map.json
 
 # Android Studio will place build artifacts here
 /android/app/debug
+/android/app/src/main/AndroidManifest.xml
 /android/app/profile
 /android/app/release
+/lib/auth/secrets.dart
