--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,13 +48,27 @@ dependencies:
   cached_network_image: ^3.2.0
   carousel_slider: ^4.1.1
   smooth_page_indicator: ^1.0.0+2
+  flutter_map: ^0.14.0
+  latlong: ^0.6.1
+  dio: ^4.0.6
+  flutter_polyline_points: ^1.0.0
+  tflite: ^1.1.2
+  firebase_ml_model_downloader: ^0.1.0+14
+  im_stepper: ^0.1.3
 #  path_provider: ^2.0.9
 #  path: ^1.8.0
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/Applogo.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -85,6 +99,8 @@ flutter:
     - lib/img/intro/
     - lib/img/home/
     - lib/img/discovery/
+    - assets/model3.tflite
+    - assets/labels2.txt
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
