--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,10 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   tflite: ^1.1.2
   firebase_ml_model_downloader: ^0.1.0+14
+  intl: ^0.17.0
   im_stepper: ^0.1.3
+  custom_marker: ^1.0.0
+  label_marker: ^1.0.1
 #  path_provider: ^2.0.9
 #  path: ^1.8.0
 
