--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   cached_network_image: ^3.2.0
   carousel_slider: ^4.1.1
   smooth_page_indicator: ^1.0.0+2
-  flutter_map: ^0.14.0
+#  flutter_map: ^0.14.0
   latlong: ^0.6.1
   dio: ^4.0.6
   flutter_polyline_points: ^1.0.0
@@ -58,6 +58,7 @@ dependencies:
   im_stepper: ^0.1.3
   custom_marker: ^1.0.0
   label_marker: ^1.0.1
+  shared_preferences: ^2.0.15
 #  path_provider: ^2.0.9
 #  path: ^1.8.0
 
