--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   custom_marker: ^1.0.0
   label_marker: ^1.0.1
   shared_preferences: ^2.0.15
+  url_launcher: ^6.1.4
 #  path_provider: ^2.0.9
 #  path: ^1.8.0
 
